# cuda-high-end-simulation-practice

./: .gitignore
Exercise_01/ex01-pt01/: bash.sh  plots.py
Exercise_01/ex01-pt01_submission/: README.md  bash.sh
Exercise_01/ex01-pt02/: README.md
Exercise_02/MolecularDynamics/: Makefile  README.md  bash.sh  bash_cuda.sh
JULIASET/: Makefile  README.md  cudautils.h  juliaset-base.cpp  juliaset-cuda.cu
LBM_project/: CMakeLists.txt  bash_hpc.sh  bash_hpc.sh.o3789348  bash_hpc.sh.o3789394  bash_hpc.sh.o3789469  bash_hpc.sh.o3789484  bash_hpc.sh.o3789486  bash_hpc.sh.o3793264  bash_hpc.sh.o3793266  bash_hpc.sh.o3793274  sample.c
LBM_project/src/: domain.h  functions.h  lbm.cpp  lbm_working.cpp  writeVTU.h  write_vti.h
LBM_project/src/cuda/: lbm copy.cpp  main.cpp
MolecularDynamics/: bash.sh  bash_cuda.sh
MolecularDynamics/src/: force.h  out.txt  particleSim
MolecularDynamics/src_cuda/: domain.h  force.h  particleSim.cu
MolecularDynamics/vtufiles/: particle_0.020000.vtu  particle_0.050000.vtu  particle_0.060000.vtu  particle_0.090000.vtu  particle_0.100000.vtu  particle_0.110000.vtu  particle_0.120000.vtu  particle_0.150000.vtu  particle_0.180000.vtu  particle_0.190000.vtu  particle_0.240000.vtu  particle_0.290000.vtu  particle_0.300000.vtu  particle_0.360000.vtu  particle_0.390000.vtu  particle_0.410000.vtu  particle_0.420000.vtu  particle_0.440000.vtu  particle_0.460000.vtu  particle_0.500000.vtu  particle_0.540000.vtu  particle_0.570000.vtu  particle_0.580000.vtu  particle_0.600000.vtu  particle_0.620000.vtu  particle_0.630000.vtu  particle_0.650000.vtu  particle_0.660000.vtu  particle_0.670000.vtu  particle_0.690000.vtu  particle_0.710000.vtu  particle_0.720000.vtu  particle_0.740000.vtu  particle_0.760000.vtu  particle_0.770000.vtu  particle_0.820000.vtu  particle_0.830000.vtu  particle_0.840000.vtu  particle_0.870000.vtu  particle_0.880000.vtu  (+57 more)
ParticleDynamics/: CMakeLists.txt  bash.sh  bash_hpc.sh
ParticleDynamics/include/: cudaError.h  domain.h  kernels.cuh  memory_manager.cuh  neigh_list.cuh  neigh_list.h  particle_system.h  utils.h
ParticleDynamics/src/: IO.cpp  domain_init.cpp  main.cpp  particle_system.cpp
ParticleDynamics/src/cuda/: energy.cu  integrator.cu  memory_manager.cu  neigh_list.cu
particles1moleculardynamics/include/: CellList.hpp  ConfigReader.hpp  ForceCalculator.hpp  Integrator.hpp  ParticleIO.hpp  PeriodicBoundary.hpp  Vec.hpp
particles1moleculardynamics/src/: Makefile  config.json  data.csv  initialize.py  simulator-base  simulator-base.cpp
particles3_DEM/: README.md
particles3_DEM/include/: ConfigReader.hpp  ParticleIO.hpp
particles3_DEM/src/: Makefile  config.json  run.py  simulator-cuda.cu
sample/: sample.txt
(+235 files in other folders)
